--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,7 @@ numpy==1.26.3
 opencv-python==4.9.0.80
 packaging==24.2
 pillow==11.0.0
-psycopg2==2.9.10
-psycopg2-binary==2.9.10
+psycopg2-binary==2.9.10  # Keep only this
 python-decouple==3.8
 python-dotenv==1.0.1
 sqlparse==0.5.3
